add routing and welcome page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,12 @@
         ],
         "semi": [
             "error"
+        ],
+        "import/no-extraneous-dependencies": [
+            "error",
+            {
+                "devDependencies": true
+            }
         ]
     }
 }
